lib/src/device/device_location/apple_device_location/apple_device_location_native_bindings.g.dart

// Generated from src/device_location/apple_device_location.h. Do not edit.
// Run make generate-device-location-bindings to regenerate.
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset(
  'package:oh_my_flutter/src/device/device_location/apple_device_location/apple_device_location_platform.dart',
)
library;

import 'dart:ffi' as ffi;

import 'package:meta/meta.dart' as meta;

@meta.RecordUse()
@ffi.Native<ffi.Pointer<ffi.Void> Function(ffi.IntPtr)>()
external ffi.Pointer<ffi.Void> omf_device_location_allocate(int size);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(OMFDeviceLocationValueCallback)>()
external void omf_device_location_check_permission(
  OMFDeviceLocationValueCallback callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void omf_device_location_free(ffi.Pointer<ffi.Void> value);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(OMFDeviceLocationValueCallback)>()
external void omf_device_location_is_service_enabled(
  OMFDeviceLocationValueCallback callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(OMFDeviceLocationValueCallback)>()
external void omf_device_location_open_settings(
  OMFDeviceLocationValueCallback callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Void Function(
    ffi.Double,
    ffi.Double,
    ffi.Pointer<ffi.Char>,
    ffi.Int64,
    OMFDeviceLocationAddressCallback,
  )
>()
external void omf_device_location_request_address(
  double latitude,
  double longitude,
  ffi.Pointer<ffi.Char> locale_identifier,
  int timeout_milliseconds,
  OMFDeviceLocationAddressCallback callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(OMFDeviceLocationCoordinatesCallback)>()
external void omf_device_location_request_coordinates(
  OMFDeviceLocationCoordinatesCallback callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(OMFDeviceLocationValueCallback)>()
external void omf_device_location_request_permission(
  OMFDeviceLocationValueCallback callback,
);

typedef OMFDeviceLocationAddressCallback =
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> address_json, ffi.Int32 failure)>>;
typedef OMFDeviceLocationCoordinatesCallback =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Double latitude,
          ffi.Double longitude,
          ffi.Double accuracy,
          ffi.Int32 failure,
        )
      >
    >;
typedef OMFDeviceLocationFailure = ffi.Int32;
typedef DartOMFDeviceLocationFailure = int;
typedef OMFDeviceLocationValueCallback =
    ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int32 value, ffi.Int32 failure)>>;
